--- a/firststyle.css
+++ b/firststyle.css
@@ -1,13 +1,24 @@
-body{
-    background-color: rgb(203, 174, 28);
+
+
+
+
+
+.Sec{
+    background-color: tomato;
+    color: aliceblue;
+    padding: 30px;
+    margin: 30px;
+    border: 13px solid gray;
+    border-bottom-left-radius: 30px ;
+    box-shadow: 3px 4px 6px 7px black;
 }
-.container{ 
-    background-color: brown;
+.parents{
+    display: flex;
+   h1{
+    color: blueviolet;
+     border: 5px solid blue;
+    margin: 20px;
+    padding: 20px;
 }
-.head2{
-    color: #de7878;
-    text-align: center;
-    font-size: 50px;
-    text-transform: capitalize;
-    text-decoration: underline;
 }
+
