--- a/navbar.css
+++ b/navbar.css
@@ -5,6 +5,10 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    position: fixed;
+    top: 15px;
+    width: 100%;
+
 
 }
 .navbar ul{
